data/all_generated_tests/raw_wast_tests/loop_IncorrectConditionEvaluation_671.wast
;; 2. **Test Description 2**:    - **Test**: Loop with nested `br_if` instructions and a condition that becomes false after the first iteration.    - **Constraint**: Ensure that after the condition becomes false, the loop does not branch.    - **Reason**: Incorrect condition evaluation might lead to perpetual branching, causing infinite loops.

(assert_invalid
  (module
    (func $loop-with-nested-br-if
      (local $cond i32)
      (i32.const 1)
      (local.set $cond)
      (loop (result i32)
        (local.get $cond)
        (i32.const 0)
        (br_if 0)
        (i32.const 1)
      )
      (drop)
    )
  )
  "branching condition results in invalid loop behavior"
)